--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -39,9 +39,12 @@
                             <option value="1214">Xueyi</option>
                             <option value="1215">Hanya</option>
                             <option value="1312">Misha</option>
+                            <option value="1301">Gallagher</option>
                         </optgroup>
 
                         <optgroup label="5 *">
+                            <option value="8001">Trailblazer Physical • The Destruction</option>
+                            <option value="8003">Trailblazer Fire • The Preservation</option>
                             <option value="1003">Himeko</option>
                             <option value="1104">Gepard</option>
                             <option value="1004">Welt</option>
@@ -59,6 +62,15 @@
                             <option value="1211">Bailu</option>
                             <option value="1212">Jingliu</option>
                             <option value="1213">Dan Heng • Imbibitor Lunae</option>
+                            <option value="1217">HuoHuo</option>
+                            <option value="1302">Argenti</option>
+                            <option value="1303">Ruan Mei</option>
+                            <option value="1304">Aventurine</option>
+                            <option value="1305">Dr. Ratio</option>
+                            <option value="1306">Sparkle</option>
+                            <option value="1307">Black Swan</option>
+                            <option value="1308">Acheron</option>
+
                         </optgroup>
                     </select>
                 </div>
