all lc 4* added

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -137,6 +137,7 @@
                             <option value="21042">Indelible Promise</option>
                             <option value="22000">Before the Tutorial Mission Starts</option>
                             <option value="22001">Hey, Over Here</option>
+                            <option value="21043">Concert for Two</option>
                         </optgroup>
                         <optgroup label="5 *">
                             <option value="23000">Night on the Milky Way</option>
