all lc 5* added

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -167,6 +167,8 @@
                             <option value="24001">Cruising in the Stellar Sea</option>
                             <option value="24002">Texture of Memories</option>
                             <option value="24003">Solitary Healing</option>
+                            <option value="23023">Inherently Unjust Destiny</option>
+                            <option value="23024">Along the Passing Shore</option>
                         </optgroup>
 
                     </select>
