--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -279,7 +279,7 @@
             
             <div class = "organizer">
                 <div>
-                    <select name="2x" id="2x" onchange="codeDisp(this.name, this.value, this)">
+                    <select name="ornaments" id="ornaments" onchange="codeDisp(this.name, this.value, this)">
                         <option value="" disabled selected>Select ornaments</option>
                         <option value="63015">Space Sealing Station</option>
                         <option value="63025">Fleet of the Ageless</option>
